# darknet

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  appveyor.yml  build.cmd  build.ps1  build.sh  clean.sh  vcpkg.json  vcpkg.json.opencv23
.github/workflows/: ccpp.yml  on_pr.yml  rebase.yml
cmake/Modules/: Findpthreads_windows.cmake
examples/: art.c  attention.c  captcha.c  cifar.c  classifier.c  coco.c  darknet.c  darkphysycom.c  detector-scipy-opencv.py  detector.c  dice.c  go.c  lsd.c  nightmare.c  regressor.c  rnn.c  rnn_vid.c  segmenter.c  super.c  swag.c  tag.c  voxel.c  writing.c  yolo.c
include/: darknet.h
physycom/: darkphysycom.c  peoplebox.cmakevars  peoplebox_params.h  peoplebox_params.h.in
python/: darknet_py3.py  darknet_stream.py
scripts/: dice_label.sh  gen_tactic.sh  setup.sh  utils.psm1
scripts/flir/: preprocess_flir_dataset.sh  start_training.sh  train_flir.ps1  train_flir_container.sh
src/: activation_kernels.cu  activation_layer.c  activations.c  activations.h  art.c  avgpool_layer.c  avgpool_layer.h  avgpool_layer_kernels.cu  batchnorm_layer.c  blas.c  blas.h  blas_kernels.cu  box.c  box.h  captcha.c  cifar.c  classifier.c  classifier.h  coco.c  col2im.c  col2im.h  col2im_kernels.cu  compare.c  connected_layer.c  connected_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cost_layer.h  cpu_gemm.c  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  crop_layer_kernels.cu  cuda.c  cuda.h  darknet.c  data.c  (+80 more)
tracking/: coords_small.json  darknet_tracking.py  resize.py  track_coords.py
win32/: clock_gettime.c  cvround.c  cvround.h  getopt.c  getopt.h  gettimeofday.c  timeutils.h  unistd.h
